# axum-controller

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
axum-controller/: Cargo.toml
axum-controller-macros/: Cargo.toml
axum-controller-macros/src/: compilation.rs  lib.rs  parsing.rs
axum-controller/examples/: basic.rs
axum-controller/src/: lib.rs
axum-controller/tests/: main.rs
