[package]
name = "axum-controller-macros"
version = "0.2.0"
edition = "2021"
# license = "MIT OR Apache-2.0"
# keywords = ["axum", "routing", "handler", "typed", "macro"]
categories = ["web-programming"]
# description = "Typed routing macros for axum"
# homepage = "https://github.com/jvdwrf/axum-typed-routing"
# repository = "https://github.com/jvdwrf/axum-typed-routing"
readme = "../README.md"

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
axum = { version = "0.8", features = [] }
serde = { version = "1.0", features = ["derive"] }

[lib]
proc-macro = true
