[package]
name = "axum-controller"
version = "0.0.1"
edition = "2021"
# license = "MIT OR Apache-2.0"
keywords = ["axum", "routing", "handler", "macro"]
categories = ["web-programming"]
description = "Typed routing macros for axum"
# homepage = "https://github.com/jvdwrf/axum-typed-routing"
# repository = "https://github.com/jvdwrf/axum-typed-routing"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8"
axum-macros = "0.5"
axum-controller-macros = { path = "../axum-controller-macros" }
# proc-macro2 = "1.0.93"
# syn = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum-test = { version = "17", features = [] }
serde = { version = "1", features = ["derive"] }
json = "0.12"

[features]
default = []
